# s3mt.xyz

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  app.vue  docker-compose.yml.foo  nuxt.config.ts  package.json  roadmap.md  services  tailwind.config.js
.github/workflows/: build-base.yml  build.yml
assets/css/: main.css
components/: CountdownTimer.vue  Footer.vue  NavBar.vue  PurchaseForm.vue  SectionDivider.vue  SwapHeader.vue  SwapInfo.vue  TrustSignals.vue  Wallet.vue  WalletConnect.vue  WhitepaperSection.vue
docker/.compose/: base.yml  s3mt.xyz.yml  traefik.yml
docker/.config/: .env.s3mt.xyz  .env.s3mt.xyz-prod  .env.secrets  (+1 more)
docs/: S3MT - ELI5 Objective.docx  S3MT - Token Burn-to-Value Redemption Mechanism.docx  S3MT - Yield Distribution Mechanism for Token Holders.docx  S3MT Presale Timeline & Key Milestones.docx  S3MT Tokenomics v1.1.docx  S3MT Tokenomics — DAO Governance & Economic Model (v1.1.docx  S3MT — Project Overview.docx  ~$MT - ELI5 Objective.docx
make/: add-app.mk  append.mk  build.mk  common.mk  dev.mk  down.mk  exec.mk  import-vector.mk  launch.mk  logs.mk  programs.mk  pull.mk  reboot.mk  rebuild.mk  recopy.mk  restart.mk  run.mk  sh.mk  start.mk  stop.mk  up.mk  update.mk
pages/: index.vue  presale.vue  swap.vue  whitepaper.vue
plugins/: solana-wallet.js
programs/s3mt.xyz/: .gitignore  Anchor.toml.bak  Cargo.toml
programs/s3mt.xyz/src/: lib.rs
scripts/: append.sh  build.sh  common.sh  dev.sh  down.sh  halt.sh  launch.sh  logs.sh  programs.sh  pull.sh  rebuild.sh  restart.sh  sh.sh  up.sh  webhook.sh
(+86 files in other folders)
